--- a/src-cordova/platforms/android/app/src/main/assets/www/index.html
+++ b/src-cordova/platforms/android/app/src/main/assets/www/index.html
@@ -1,35 +1,1 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Quasar</title>
-
-    <meta charset="utf-8">
-    <meta name="description" content="Quasar Capacitor App">
-    <meta name="format-detection" content="telephone=no">
-    <meta name="msapplication-tap-highlight" content="no">
-    <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, viewport-fit=cover">
-
-    <style type="text/css">
-      .page {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        height: 100vh;
-        text-align: center;
-      }
-    </style>
-  </head>
-
-  <body>
-    <div class="page">
-      <div>
-        This file will be auto-generated. Do not edit.
-      </div>
-
-      <div>
-        Run "quasar dev" or "quasar build" with Cordova mode.
-      </div>
-    </div>
-  </body>
-</html>
+<!DOCTYPE html><html><head><title></title><meta charset=utf-8><meta name=description content=""><meta name=format-detection content="telephone=no"><meta name=msapplication-tap-highlight content=no><meta name=viewport content="user-scalable=no,initial-scale=1,maximum-scale=1,minimum-scale=1,width=device-width,viewport-fit=cover"><link rel=icon href=statics/quasar-logo.png type=image/x-icon><link rel=icon type=image/png sizes=32x32 href=statics/icons/favicon-32x32.png><link rel=icon type=image/png sizes=16x16 href=statics/icons/favicon-16x16.png><link href=css/vendor.2fb9825f.css rel=stylesheet><link href=css/app.90d3c398.css rel=stylesheet></head><body><div id=q-app></div><script src=cordova.js></script><script src=js/vendor.js></script><script src=js/app.js></script></body></html>
